--- a/src/main/webapp/scripts/app/application/address/address-view.html
+++ b/src/main/webapp/scripts/app/application/address/address-view.html
@@ -33,9 +33,7 @@
         </div>
         <div class="form-group">
             <label translate="address.form.country" for="field_country">Country</label>
-            <select class="form-control" name="country" id="field_country"
-			      ng-options="country.key as country.name for country in countries | orderBy:'name'"
-			      ng-model="address.country" disabled></select>
+            <select-country name="country" id="field_country" ng-model="address.country" disabled="disabled"></select-country>
         </div>
         <div class="form-group">
             <label translate="address.form.phone" for="field_phone">Phone</label>
