--- a/src/main/webapp/scripts/app/application/address/address.html
+++ b/src/main/webapp/scripts/app/application/address/address.html
@@ -85,9 +85,7 @@
 		        </div>
 		        <div class="form-group">
 		            <label translate="address.form.country" for="field_country">Country</label>
-		            <select class="form-control" name="country" id="field_country"
-					      ng-options="country.key as country.name for country in countries | orderBy:'name'"
-					      ng-model="address.country" required></select>
+		            <select-country name="country" id="field_country" ng-model="address.country" required></select-country>
 		
 		            <div ng-show="addressForm.country.$dirty && addressForm.country.$invalid">
 		                <p class="help-block" ng-show="addressForm.country.$error.required" translate="entity.validation.required">
