--- a/src/main/webapp/scripts/app/application/identity/identity-view.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-view.html
@@ -38,15 +38,11 @@
 	    </div>
 	    <div class="form-group">
 	        <label translate="identity.form.birthCountry" for="field_birthCountry">BirthCountry</label>
-	        <select class="form-control" name="birthCountry" id="field_birthCountry"
-			      ng-options="country.key as country.name for country in countries | orderBy:'name'"
-			      ng-model="identity.birthCountry" disabled></select>
+	        <select-country name="birthCountry" id="field_birthCountry" ng-model="identity.birthCountry" disabled="disabled"></select-country>
 	    </div>
 	    <div class="form-group">
 	        <label translate="identity.form.nationality" for="field_nationality">Nationality</label>
-	        <select class="form-control" name="nationality" id="field_nationality"
-			      ng-options="country.key as country.name for country in countries | orderBy:'name'"
-			      ng-model="identity.nationality" disabled></select>
+	        <select-country name="nationality" id="field_nationality" ng-model="identity.nationality" disabled="disabled"></select-country>
 	    </div>
 	    <div class="form-group">
 	        <label translate="identity.form.passportNumber" for="field_passportNumber">PassportNumber</label>
