--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -163,6 +163,8 @@
     
     <script src="scripts/app/application/identity/identity.js"></script>
     <script src="scripts/app/application/identity/identity.controller.js"></script>
+    <script src="scripts/app/application/family/family.js"></script>
+    <script src="scripts/app/application/family/family.controller.js"></script>
     <script src="scripts/app/application/address/address.js"></script>
     <script src="scripts/app/application/address/address.controller.js"></script>
     <script src="scripts/app/application/project/project.js"></script>
