--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 			    
-				<identity-form-light ng-model="identity" with-tooltip="true"></identity-form-light>
+				<identity-form-light ng-model="identity" with-francisation="withFrancisation" with-tooltip="true"></identity-form-light>
 				
 				<div class="form-group">
 			        <label translate="identity.form.maritalStatus" for="field_maritalStatus">Marital status</label>
