--- a/src/main/webapp/scripts/app/application/family/family.html
+++ b/src/main/webapp/scripts/app/application/family/family.html
@@ -7,7 +7,6 @@
     <br><br>
 
 	<form name="identityForm" role="form" class="form-horizontal" novalidate ng-submit="save()" show-validation>
-	
 		<div class="row">
 			<div class="col-xs-1 col-xs-offset-1">
 		    	<div class="step-number-align">
@@ -57,4 +56,8 @@
 
 <script type="text/javascript">
 	$("html, body").animate({ scrollTop: 0 }, "slow");
+
+	$(function () {
+		$('[data-toggle="popover"]').popover();
+	});
 </script>
