--- a/src/main/webapp/scripts/app/application/identity/identity-light.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-light.html
@@ -36,7 +36,7 @@
         <input type="text" class="form-control" name="firstName" id="field_firstName" ng-model="identity.firstName" >
     </div>
     <div class="form-group" ng-if="withFrancisation && identity.francisation">
-        <label translate="identity.form.firstNameFrancise" for="field_firstNameFrancise">FirstName</label>
+        <label translate="identity.form.firstNameFrancise" for="field_firstNameFrancise">FirstNameFrancise</label>
         <input type="text" class="form-control" name="firstNameFrancise" id="field_firstNameFrancise" ng-model="identity.firstNameFrancise" >
     </div>
     <div class="form-group">
