--- a/src/main/webapp/scripts/app/application/address/address-view.html
+++ b/src/main/webapp/scripts/app/application/address/address-view.html
@@ -1,57 +1,18 @@
 <div ng-cloak>
 	<div class="col-sm-5">
-		<div class="form-group">
-            <label translate="address.form.owner" for="field_owner">Owner</label>
-            <input type="text" class="form-control" name="owner" id="field_owner"
-                    ng-model="address.owner" readonly="readonly">
-        </div>
+		<ng-include src="'scripts/app/application/address/address-light-view.html'"></ng-include>
         <div class="form-group">
-            <label translate="address.form.number" for="field_number">Number</label>
-            <input type="text" class="form-control" name="number" id="field_number" ng-model="address.number" 
-            		readonly="readonly">
-        </div>
-        <div class="form-group">
-            <label translate="address.form.street" for="field_street">Street</label>
-            <input type="text" class="form-control" name="street" id="field_street"
-                    ng-model="address.street" readonly="readonly">
-        </div>
-        <div class="form-group">
-            <label translate="address.form.complement" for="field_complement">Complement</label>
-            <input type="text" class="form-control" name="complement" id="field_complement"
-                    ng-model="address.complement" readonly="readonly">
-
-        </div>
-        <div class="form-group">
-            <label translate="address.form.postalCode" for="field_postalCode">PostalCode</label>
-            <input type="text" class="form-control" name="postalCode" id="field_postalCode"
-                    ng-model="address.postalCode" readonly="readonly">
-        </div>
-        <div class="form-group">
-            <label translate="address.form.city" for="field_city">City</label>
-            <input type="text" class="form-control" name="city" id="field_city"
-                    ng-model="address.city" readonly="readonly">
-        </div>
-        <div class="form-group">
-            <label translate="address.form.country" for="field_country">Country</label>
-            <select-country name="country" id="field_country" ng-model="address.country" disabled="disabled"></select-country>
-        </div>
-        <div class="form-group">
-            <label translate="address.form.phone" for="field_phone">Phone</label>
-            <input type="text" class="form-control" name="phone" id="field_phone"
-                    ng-model="address.phone" readonly="readonly">
+            <label translate="address.form.phone">Phone</label>
+            <input type="text" class="form-control" ng-model="address.phone" readonly="readonly">
         </div>
         <div class="form-group" ng-if="!isAgent">
-            <label translate="address.form.email" for="field_email">Email</label>
-            <input type="text" class="form-control" name="email" id="field_email"
-                    ng-model="address.email" readonly="readonly">
+            <label translate="address.form.email">Email</label>
+            <input type="text" class="form-control" ng-model="address.email" readonly="readonly">
         </div>
         <div class="form-group" ng-if="!isAgent">
-            <label translate="address.form.contactType" for="field_contactType">ContactType</label>
+            <label translate="address.form.contactType">ContactType</label>
             <div class="checkbox" ng-repeat="contactType in ['email', 'sms', 'postal']">
-		        <label><input type="checkbox" id="field_contactType_{{contactType}}" name="contactType_{{contactType}}" 
-		        				value="{{contactType}}" 
-		        				ng-checked="address.contactType.indexOf(contactType) != -1" 
-		        				disabled>{{'sejourApp.ContactType.'+contactType | translate}}</label>
+		        <label><input type="checkbox" value="{{contactType}}" ng-checked="address.contactType.indexOf(contactType) != -1" disabled>{{'sejourApp.ContactType.'+contactType | translate}}</label>
 			</div>
         </div>
 	</div>
