--- a/src/main/webapp/scripts/app/application/family/family.html
+++ b/src/main/webapp/scripts/app/application/family/family.html
@@ -19,9 +19,9 @@
 		</div>
 		<br>
 		<div ng-repeat="parent in parents">
-			<div class="row" id="parentHeader{{::$index}}">
+			<div class="row">
 				<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-2">
-					<div class="collapsable-panel" ng-class="{'opened': panelOpen===$index}" ng-click="updatePanelOpen($index)">
+					<div class="collapsable-panel" id="Panel{{::$index}}" ng-class="{'opened': panelOpen===$index}" ng-click="updatePanelOpen($index)">
 						<div class="panel-heading">
 							<span class="glyphicon" ng-class="{'glyphicon-triangle-top': panelOpen===$index, 'glyphicon-triangle-bottom': panelOpen!==$index}"></span>
 							<h5 class="panel-title" translate="sejourApp.PersonType.parents" translate-values="{ index: '{{$index+1}}'}">Parent</h5>
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row" id="parentContent{{::$index}}" ng-show="panelOpen===$index">
+			<div class="row" ng-if="panelOpen===$index">
 				<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 					<identity-form-light ng-model="parent.identity"></identity-form-light>
 					<address-form-light ng-model="parent.address"></address-form-light>
