--- a/src/main/webapp/scripts/app/application/identity/identity-view.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-view.html
@@ -1,52 +1,44 @@
 <div ng-cloak>
 	<div class="col-sm-5">
+		<ng-include src="'scripts/app/application/identity/identity-light-view.html'"></ng-include>
+	    <div class="form-group">
+	        <label translate="identity.form.passportNumber">PassportNumber</label>
+	        <input type="text" class="form-control" ng-model="identity.passportNumber" readonly="readonly">
+	    </div>
+	    <div class="form-group">
+	        <label translate="identity.form.maritalStatus">Marital status</label>
+	        <select class="form-control" ng-model="identity.maritalStatus" disabled="disabled">
+	        	<option label=" "></option>
+	        	<option value="single" translate="sejourApp.MaritalStatus.single"></option>
+	        	<option value="cohabitant" translate="sejourApp.MaritalStatus.cohabitant"></option>
+	        	<option value="civil_partner" translate="sejourApp.MaritalStatus.civil_partner"></option>
+	        	<option value="married" translate="sejourApp.MaritalStatus.married"></option>
+	        	<option value="separated" translate="sejourApp.MaritalStatus.separated"></option>
+	        	<option value="divorced" translate="sejourApp.MaritalStatus.divorced"></option>
+	        	<option value="widowed" translate="sejourApp.MaritalStatus.widowed"></option>
+	        </select>
+	    </div>
+	    <div class="form-group">
+	        <label translate="identity.form.childsNumber">ChildsNumber</label>
+	        <input type="number" min="0" class="form-control" ng-model="identity.childsNumber" readonly="readonly">
+	    </div>
+	    <div class="form-group">
+	        <label translate="identity.form.brothersNumber">BrothersNumber</label>
+	        <input type="number" min="0" class="form-control" ng-model="identity.brothersNumber" readonly="readonly">
+	    </div>
 		<div class="form-group">
-	        <label translate="identity.form.lastName" for="field_lastName">LastName</label>
-	        <input type="text" class="form-control" name="lastName" id="field_lastName" ng-model="identity.lastName" readonly="readonly">
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.usedLastName" for="field_usedLastName">UsedLastName</label>
-	        <input type="text" class="form-control" name="usedLastName" id="field_usedLastName" ng-model="identity.usedLastName" readonly="readonly">
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.firstName" for="field_firstName">FirstName</label>
-	        <input type="text" class="form-control" name="firstName" id="field_firstName" ng-model="identity.firstName" readonly="readonly">
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.sex" for="field_sex">Sex</label>
-	        <div>
-		        <label class="radio-inline"><input type="radio" id="field_sex" name="sex" ng-model="identity.sex" value="F" disabled>{{'sejourApp.SexType.F' | translate}}</label>
-				<label class="radio-inline"><input type="radio" id="field_sex" name="sex" ng-model="identity.sex" value="M" disabled>{{'sejourApp.SexType.M' | translate}}</label>
-               </div>
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.birthDate" for="field_birthDate">BirthDate</label>
-	        <div class="input-group date">
-		        <span class="input-group-addon">
-                       <span class="fa fa-calendar"></span>
-                   </span>
-                   <input type="text" class="form-control"
-			           name="birthDateTxt" id="field_birthDateTxt"
-			           ng-model="identity.birthDateTxt"
-			           placeholder="{{'global.form.date.format' | translate}}" readonly="readonly">
-			</div>
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.birthCity" for="field_birthCity">BirthCity</label>
-	        <input type="text" class="form-control" name="birthCity" id="field_birthCity"
-	                ng-model="identity.birthCity" readonly="readonly">
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.birthCountry" for="field_birthCountry">BirthCountry</label>
-	        <select-country name="birthCountry" id="field_birthCountry" ng-model="identity.birthCountry" disabled="disabled"></select-country>
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.nationality" for="field_nationality">Nationality</label>
-	        <select-country name="nationality" id="field_nationality" ng-model="identity.nationality" disabled="disabled"></select-country>
-	    </div>
-	    <div class="form-group">
-	        <label translate="identity.form.passportNumber" for="field_passportNumber">PassportNumber</label>
-	        <input type="text" class="form-control" name="passportNumber" id="field_passportNumber" ng-model="identity.passportNumber" readonly="readonly">
+	        <label translate="identity.form.activity">Activity</label>
+	        <select class="form-control" ng-model="identity.activity" disabled="disabled">
+	        	<option label=" "></option>
+	        	<option value="student" translate="sejourApp.ActivityType.student"></option>
+	        	<option value="trainee" translate="sejourApp.ActivityType.trainee"></option>
+	        	<option value="unemployed" translate="sejourApp.ActivityType.unemployed"></option>
+	        	<option value="salaried" translate="sejourApp.ActivityType.salaried"></option>
+	        	<option value="crafstman" translate="sejourApp.ActivityType.crafstman"></option>
+	        	<option value="liberal" translate="sejourApp.ActivityType.liberal"></option>
+	        	<option value="annuitant" translate="sejourApp.ActivityType.annuitant"></option>
+	        	<option value="other" translate="sejourApp.ActivityType.other"></option>
+	        </select>
 	    </div>
 	</div>
 	<div class="col-sm-7">
