--- a/src/main/webapp/scripts/app/application/project/project.html
+++ b/src/main/webapp/scripts/app/application/project/project.html
@@ -23,18 +23,7 @@
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 			    <div class="form-group" ng-if="needComingDate">
 		            <label translate="project.form.comingDate" for="field_comingDate">ComingDate</label>
-			        <div class="input-group date">
-				        <span class="input-group-addon">
-	                        <span class="fa fa-calendar"></span>
-	                    </span>
-	                    <input type="text" class="form-control"
-					           datetimepicker
-					           datetimepicker-options="{{datePickerOptions}}"
-					           name="comingDateTxt" id="field_comingDateTxt"
-					           ng-model="project.comingDateTxt"
-					           placeholder="{{'global.form.date.format' | translate}}" >
-					</div>
-		
+		            <input-date field-name="comingDate" field-id="field_comingDate" ng-model="project.comingDate"></input-date>
 		            <div ng-show="projectForm.comingDateTxt.$dirty && projectForm.comingDateTxt.$invalid">
 		                <p class="help-block" ng-show="projectForm.comingDate.$error.required" translate="entity.validation.required">
 		                    This field is required.
@@ -68,18 +57,7 @@
 		        </div>
 		        <div class="form-group">
 		            <label translate="project.form.trainingStart" for="field_trainingStart">TrainingStart</label>
-			        <div class="input-group date">
-				        <span class="input-group-addon">
-	                        <span class="fa fa-calendar"></span>
-	                    </span>
-	                    <input type="text" class="form-control"
-					           datetimepicker
-					           datetimepicker-options="{{datePickerOptions}}"
-					           name="trainingStartTxt" id="field_trainingStartTxt"
-					           ng-model="project.trainingStartTxt"
-					           placeholder="{{'global.form.date.format' | translate}}">
-					</div>
-		
+		            <input-date field-name="trainingStart" field-id="field_trainingStart" ng-model="project.trainingStart"></input-date>
 		            <div ng-show="projectForm.trainingStartTxt.$dirty && projectForm.trainingStartTxt.$invalid">
 		                <p class="help-block" ng-show="projectForm.trainingStart.$error.required" translate="entity.validation.required">
 		                    This field is required.
