--- a/src/main/webapp/scripts/app/application/address/address.html
+++ b/src/main/webapp/scripts/app/application/address/address.html
@@ -22,13 +22,11 @@
 	    <div class="row">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 		        
-		        <address-form-light ng-model="address" with-tooltip="isRenewal"></address-form-light>
+		        <address-form-light ng-model="address" with-tooltip="true"></address-form-light>
 		        
 		        <div class="form-group">
 		            <label translate="address.form.phone" for="field_phone">Phone</label>
-		            <input type="text" class="form-control" name="phone" id="field_phone"
-		                    ng-model="address.phone" required>
-		
+		            <input type="text" class="form-control" name="phone" id="field_phone" ng-model="address.phone" required>
 		            <div ng-show="addressForm.phone.$dirty && addressForm.phone.$invalid">
 		                <p class="help-block" ng-show="addressForm.phone.$error.required" translate="entity.validation.required">
 		                    This field is required.
@@ -37,9 +35,7 @@
 		        </div>
 		        <div class="form-group">
 		            <label translate="address.form.email" for="field_email">Email</label>
-		            <input type="text" class="form-control" name="email" id="field_email"
-		                    ng-model="address.email" required>
-		
+		            <input type="text" class="form-control" name="email" id="field_email" ng-model="address.email" required>
 		            <div ng-show="addressForm.email.$dirty && addressForm.email.$invalid">
 		                <p class="help-block" ng-show="addressForm.email.$error.required" translate="entity.validation.required">
 		                    This field is required.
@@ -49,7 +45,6 @@
 		        <div class="form-group">
 		            <label translate="address.form.contactType" for="field_contactType">ContactType</label>
 		            <tooltip tooltip-text='address.form.contactType.tooltip'></tooltip>
-
 			        <div class="checkbox" ng-repeat="contactType in contactTypeValues">
 				        <label><input type="checkbox" id="field_contactType_{{contactType.value}}" name="contactType_{{contactType.value}}" 
 				        				ng-model="contactType.checked" 
@@ -57,7 +52,6 @@
 				        				ng-click="updateContactType(contactType)"  
 				        				ng-required="address.contactType.length==0">{{'sejourApp.ContactType.'+contactType.value | translate}}</label>
 					</div>
-		
 		            <div ng-show="addressForm.contactType.$dirty && addressForm.contactType.$invalid">
 		                <p class="help-block" ng-show="addressForm.contactType.$error.required" translate="entity.validation.required">
 		                    This field is required.
