--- a/src/main/webapp/scripts/app/application/identity/identity-view.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-view.html
@@ -7,16 +7,7 @@
 	    </div>
 	    <div class="form-group">
 	        <label translate="identity.form.maritalStatus">Marital status</label>
-	        <select class="form-control" ng-model="identity.maritalStatus" disabled="disabled">
-	        	<option label=" "></option>
-	        	<option value="single" translate="sejourApp.MaritalStatus.single"></option>
-	        	<option value="cohabitant" translate="sejourApp.MaritalStatus.cohabitant"></option>
-	        	<option value="civil_partner" translate="sejourApp.MaritalStatus.civil_partner"></option>
-	        	<option value="married" translate="sejourApp.MaritalStatus.married"></option>
-	        	<option value="separated" translate="sejourApp.MaritalStatus.separated"></option>
-	        	<option value="divorced" translate="sejourApp.MaritalStatus.divorced"></option>
-	        	<option value="widowed" translate="sejourApp.MaritalStatus.widowed"></option>
-	        </select>
+	        <select-marital-status ng-model="identity.maritalStatus" disabled="disabled"></select-marital-status>
 	    </div>
 	    <div class="form-group">
 	        <label translate="identity.form.childsNumber">ChildsNumber</label>
@@ -28,17 +19,7 @@
 	    </div>
 		<div class="form-group">
 	        <label translate="identity.form.activity">Activity</label>
-	        <select class="form-control" ng-model="identity.activity" disabled="disabled">
-	        	<option label=" "></option>
-	        	<option value="student" translate="sejourApp.ActivityType.student"></option>
-	        	<option value="trainee" translate="sejourApp.ActivityType.trainee"></option>
-	        	<option value="unemployed" translate="sejourApp.ActivityType.unemployed"></option>
-	        	<option value="salaried" translate="sejourApp.ActivityType.salaried"></option>
-	        	<option value="crafstman" translate="sejourApp.ActivityType.crafstman"></option>
-	        	<option value="liberal" translate="sejourApp.ActivityType.liberal"></option>
-	        	<option value="annuitant" translate="sejourApp.ActivityType.annuitant"></option>
-	        	<option value="other" translate="sejourApp.ActivityType.other"></option>
-	        </select>
+	        <select-activity-type ng-model="identity.activity" disabled="disabled"></select-activity-type>
 	    </div>
 	</div>
 	<div class="col-sm-7">
